--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,4 +7,5 @@ requires-python = ">=3.9"
 dependencies = [
     "mkdocs-material>=9.5.42",
     "mkdocstrings-python>=1.12.2",
+    "mkdocs-glightbox>=0.4.0",
 ]
