--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -55,6 +55,8 @@ markdown_extensions:
       permalink: true
 
   # Extensions part of Pymdown
+  - pymdownx.arithmatex:
+      generic: true
   - pymdownx.betterem:
       smart_enable: all
   - pymdownx.caret
@@ -78,6 +80,11 @@ markdown_extensions:
   - pymdownx.tasklist:
       custom_checkbox: true
   - pymdownx.tilde
+
+extra_javascript:
+  # For MathJax
+  - javascripts/mathjax.js
+  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
 
 extra_css:
   - stylesheets/code_select.css
