--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -82,6 +82,7 @@ markdown_extensions:
   - pymdownx.tilde
 
 extra_javascript:
+  - javascripts/extra.js
   # For MathJax
   - javascripts/mathjax.js
   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
