--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -78,3 +78,6 @@ markdown_extensions:
   - pymdownx.tasklist:
       custom_checkbox: true
   - pymdownx.tilde
+
+extra_css:
+  - stylesheets/code_select.css
