--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,12 @@
 site_name: My example site
+site_author: NORCE
 site_url: https://mydomain.org/mysite
 # edit_uri: blob/master/docs/
+# repo_name: patnr/remedy.no
+# repo_url: https://github.com/patnr/remedy.no
+# copyright: Copyright &copy; 2024 NORCE
+
+docs_dir: docs
 # nav:
 #   - Home: index.md
 #   - Other: other_page.md
