--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,4 +12,5 @@ dependencies = [
     "mkdocs-literate-nav>=0.6.1",
     "mkdocs-section-index>=0.3.9",
     "mkdocs-glightbox>=0.4.0",
+    "mkdocs-jupyter>=0.25.1",
 ]
